fixed email sending + password reset
